[package]
name = "taomi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
futures-util = "0.3.29"
main = "0.1.0"
serde = "1.0.192"
serde-env = "0.1.1"
serde_derive = "1.0.192"
signal = "0.7.0"
tokio = { version = "1.34.0", features = ["signal", "sync", "rt", "rt-multi-thread", "tokio-macros", "full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
